# transcription-service

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  example_usage.py  main.py  pyproject.toml
app/: database.py  main.py
app/api/: routes.py  schemas.py
app/models/: __init__.py  transcription.py
app/services/: __init__.py  transcription_service.py
docker/deleter/: Dockerfile  app.py
docker/downloader/: Dockerfile  app.py  requirements.txt
docker/transcriber/: Dockerfile  app.py  requirements.txt
