[project]
name = "video-transcription-service"
version = "0.1.0"
description = "Video transcription service using yt-dlp and HuggingFace models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "yt-dlp>=2024.11.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
]
